# GloBFP_retriever

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: retrieve-aoi.yml  task-run.yml
examples/: dongshan_nanjing.geojson  nanjing_subdistricts.geojson  task_aoi.geojson
globfp_retriever/: __init__.py  aoi.py  clean.py  cli.py  download.py  geocrypt.py  metadata.py  obj_export.py  osm_export.py  retrieve.py
scripts/: run_aoi.py
tests/: conftest.py  test_aoi.py  test_clean.py  test_cli.py  test_download.py  test_geocrypt.py  test_metadata.py  test_obj_export.py  test_osm_export.py  test_retrieve.py
